--- a/style.css
+++ b/style.css
@@ -1,35 +1,45 @@
 * {
-  //border: 3px solid red;
+  /*border: 3px solid red;*/
 }
 
 body {
   background-color: rgb(27, 4, 56);
 }
 
-.container {
-  width: 50em;
-  height: 80em;
+.game_board_container {
+  /*width: 50em;
+  height: 50em;*/
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
+  /*position: relative;*/
   background-image: linear-gradient(to right, green, darkgreen);
+  border: 3px solid white;
 }
 
 h1 {
   text-align: center;
-  position: absolute;
   top: 0.25em;
-
   width: 100%;
   color: rgb(224, 193, 52);
   font-size: 4em;
   font-family: "Franklin Gothic Medium";
 }
 
-.card {
-  position: absolute;
-  top: 10em;
-  width: 10%;
+.card_group_container {
+  /*width: 50em;*/
+  height: 40em;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  border: 5px solid orange;
+}
+
+.card {
+  /*position: absolute;*/
+  margin-top: 1em;
+  margin-left: 1em;
+  width: 10%;
 }
