--- a/style.css
+++ b/style.css
@@ -26,6 +26,42 @@ h1 {
   font-family: "Franklin Gothic Medium";
 }
 
+.control_panel_container {
+  border: 5px solid black;
+  height: 4em;
+  display: flex;
+  flex-direction: row;
+}
+
+.options_panel_container {
+  border: 5px solid black;
+  height: 9em;
+  display: flex;
+  flex-direction: column;
+}
+
+.card_selection_pulldown {
+  margin-left: 1em;
+  background-color: rgb(224, 193, 52);
+
+  color: black;
+  font-size: 1em;
+  width: 25%;
+}
+
+.deal_cards_button {
+  background-color: blue;
+  background-color: rgb(224, 193, 52);
+
+  color: black;
+  margin-left: 1em;
+  margin-top: 1em;
+  text-align: center;
+  width: 25%;
+  height: 50%;
+  font-size: 1em;
+}
+
 .card_group_container {
   /*width: 50em;*/
   height: 40em;
@@ -41,5 +77,5 @@ h1 {
   /*position: absolute;*/
   margin-top: 1em;
   margin-left: 1em;
-  width: 10%;
+  width: 8%;
 }
