--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   /*position: relative;*/
-  background-image: linear-gradient(to right, green, darkgreen);
+  background-image: linear-gradient(to right, green, rgb(5, 100, 5));
   border: 3px solid white;
 }
 
