--- a/style.css
+++ b/style.css
@@ -83,17 +83,10 @@ h1 {
 
 .timer_class {
   background-color: rgb(223, 95, 10);
+  font-size: 1.5em;
   margin-top: 2%;
-  margin-left: 10em;
-  width: 10%;
-  height: 50%;
-  box-shadow: 0.1em 0.1em;
-}
-
-.game_clock_class {
-  background-color: rgb(223, 95, 10);
-  margin-top: 2%;
-  width: 8%;
-  height: 50%;
+  margin-left: 1em;
+  width: 20%;
+  height: 45%;
   box-shadow: 0.1em 0.1em;
 }
