--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, green, rgb(5, 100, 5));
+  background-image: url("./assets/FeltTop.jpg");
+
   border: 3px solid white;
+  min-width: 800px;
 }
 
 h1 {
@@ -31,6 +33,52 @@ h1 {
   height: 4em;
   display: flex;
   flex-direction: row;
+  /*justify-content: space-between;*/
+}
+
+.control_panel_button {
+  background-color: rgb(224, 193, 52);
+  box-shadow: 0.1em 0.1em;
+
+  color: black;
+  margin-left: 1em;
+  margin-top: 1em;
+  text-align: center;
+  height: 60%;
+  font-size: 1em;
+}
+
+.deal_cards_button {
+  width: 18%;
+}
+
+.small_button {
+  width: 15%;
+  font-size: medium;
+}
+
+.timer_class {
+  background-color: rgb(223, 95, 10);
+  border: 3px solid black;
+
+  font-size: 1.4em;
+  margin-top: 1.6%;
+  margin-left: 1em;
+  width: 30%;
+  height: 55%;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 0.5em;
+}
+
+.sound_button_class {
+  box-shadow: 0.1em 0.1em;
+  border-radius: 0.5em;
+
+  margin-top: 1.1em;
+  margin-left: 15em;
+  width: 4%;
+  height: 42%;
 }
 
 .options_panel_container {
@@ -38,7 +86,7 @@ h1 {
   border-right: 5px solid black;
   height: 7em;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .card_selection_pulldown {
@@ -52,24 +100,16 @@ h1 {
   text-align: center;
 }
 
-.control_panel_button {
+.status_bar_class {
+  border: 3px solid black;
   background-color: rgb(224, 193, 52);
-  box-shadow: 0.1em 0.1em;
-
-  color: black;
+  font-size: 1.4em;
+  margin-top: 0%;
   margin-left: 1em;
-  margin-top: 1em;
+  width: 50%;
+  height: 75%;
   text-align: center;
-  height: 50%;
-  font-size: 1em;
-}
-
-.deal_cards_button {
-  width: 18%;
-}
-
-.small_button {
-  width: 15%;
+  padding-top: 0.5em;
 }
 
 .card_group_container {
@@ -86,14 +126,4 @@ h1 {
   margin-top: 1em;
   margin-left: 1em;
   width: 8%;
-}
-
-.timer_class {
-  background-color: rgb(223, 95, 10);
-  font-size: 1.5em;
-  margin-top: 2%;
-  margin-left: 1em;
-  width: 20%;
-  height: 45%;
-  box-shadow: 0.1em 0.1em;
 }
