--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-  /*border: 3px solid red;*/
-}
-
 body {
   margin-top: 2em;
   background-image: url("./assets/card_back.jpg");
@@ -14,7 +10,8 @@ body {
   background-image: url("./assets/FeltTop.jpg");
 
   border: 3px solid white;
-  min-width: 800px;
+  min-width: 600px;
+  max-width: 1000px;
 }
 
 h1 {
@@ -36,7 +33,7 @@ h1 {
   height: 4em;
   display: flex;
   flex-direction: row;
-  /*justify-content: space-between;*/
+  justify-content: space-between;
 }
 
 .control_panel_button {
@@ -70,7 +67,9 @@ h1 {
 
   font-size: 1.4em;
   margin-top: 1.6%;
-  margin-left: 1em;
+  /*margin-left: 1em;*/
+  margin-right: 6em;
+
   width: 30%;
   height: 55%;
   text-align: center;
@@ -83,7 +82,9 @@ h1 {
   border-radius: 0.5em;
 
   margin-top: 1.1em;
-  margin-left: 15em;
+  /*margin-left: 15em;*/
+  margin-right: 1em;
+
   width: 4%;
   height: 42%;
 }
